@@ -84,7 +84,7 @@
 
 <h1> list widget </h1>
 
-A <a href="http://developer.gnome.org/gtk/2.24/GtkList.html">GtkList</a> packed inside a <a href="http://developer.gnome.org/gtk/2.24/GtkScrolledWindow.html">GtkScrolledWindow</a>
+A <a href="http://developer.gnome.org/gtk/2.24/GtkList.html">GtkList</a> packed inside a <a href="http://developer.gnome.org/gtk/2.24/GtkViewport.html">GtkViewport</a> inside a <a href="http://developer.gnome.org/gtk/2.24/GtkScrolledWindow.html">GtkScrolledWindow</a>
 
 <hr>
 
@@ -116,6 +116,9 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkList.html">GtkList</a> packed 
 <tr><td class="wiki"> space-expand </td><td class="wiki"> Pack widget expanding into space </td><td class="wiki"> <code>true</code> or <code>false</code> </td><td class="wiki"> 0.7.21 </td></tr>
 <tr><td class="wiki"> space-fill </td><td class="wiki"> Pack widget filling space </td><td class="wiki"> <code>true</code> or <code>false</code> </td><td class="wiki"> 0.7.21 </td></tr>
 <tr><td class="wiki"> block-function-signals </td><td class="wiki"> Block signal emissions from functions </td><td class="wiki"> <code>true</code> or <code>false</code> </td><td class="wiki"> 0.7.21 </td></tr>
+<tr><td class="wiki"> hscrollbar-policy </td><td class="wiki"> Policy for the horizontal scrollbar </td><td class="wiki"> <code>0</code>, <code>1</code>, <code>2</code> (always, automatic, never) </td><td class="wiki"> 0.8.1 </td></tr>
+<tr><td class="wiki"> vscrollbar-policy </td><td class="wiki"> Policy for the vertical scrollbar </td><td class="wiki"> <code>0</code>, <code>1</code>, <code>2</code> (always, automatic, never) </td><td class="wiki"> 0.8.1 </td></tr>
+<tr><td class="wiki"> shadow-type </td><td class="wiki"> Viewport shadow type </td><td class="wiki"> <code>0</code> to <code>4</code> (none, in, out, etched-in, etched-out) </td><td class="wiki"> 0.8.1 </td></tr>
 </table>
 
 <h2> Directives </h2>
@@ -217,7 +220,7 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkList.html">GtkList</a> packed 
 						<td>
 							<table width="100%" cellpadding="0px" cellspacing="0px">
 								<tr>
-									<td class="footer" width="33%" align="center">2012-08-29 <a href="mailto:thunorsif@hotmail.com">Thunor</a></td>
+									<td class="footer" width="33%" align="center">2012-09-05 <a href="mailto:thunorsif@hotmail.com">Thunor</a></td>
 									<td class="footer" width="33%" align="center"><a href="http://code.google.com/p/gtkdialog/">Project Page</a></td>
 									<td class="footer" width="33%" align="center"><a href="http://www.murga-linux.com/puppy/viewtopic.php?t=69188">Development Thread</a></td>
 								</tr>
