@@ -126,6 +126,8 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkTreeView.html">GtkTreeView</a>
 <tr><td class="wiki"> space-expand </td><td class="wiki"> Pack widget expanding into space </td><td class="wiki"> <code>true</code> or <code>false</code> </td><td class="wiki"> 0.7.21 </td></tr>
 <tr><td class="wiki"> space-fill </td><td class="wiki"> Pack widget filling space </td><td class="wiki"> <code>true</code> or <code>false</code> </td><td class="wiki"> 0.7.21 </td></tr>
 <tr><td class="wiki"> block-function-signals </td><td class="wiki"> Block signal emissions from functions </td><td class="wiki"> <code>true</code> or <code>false</code> </td><td class="wiki"> 0.7.21 </td></tr>
+<tr><td class="wiki"> hscrollbar-policy </td><td class="wiki"> Policy for the horizontal scrollbar </td><td class="wiki"> <code>0</code>, <code>1</code>, <code>2</code> (always, automatic, never) </td><td class="wiki"> 0.8.1 </td></tr>
+<tr><td class="wiki"> vscrollbar-policy </td><td class="wiki"> Policy for the vertical scrollbar </td><td class="wiki"> <code>0</code>, <code>1</code>, <code>2</code> (always, automatic, never) </td><td class="wiki"> 0.8.1 </td></tr>
 <tr><td class="wiki"> exported-column </td><td class="wiki"> The column to export data from </td><td class="wiki"> An integer &gt;= <code>0</code> </td><td class="wiki"> </td></tr>
 <tr><td class="wiki"> icon-name </td><td class="wiki"> Default GTK theme icon name for all rows </td><td class="wiki"> </td><td class="wiki"> </td></tr>
 <tr><td class="wiki"> stock-id </td><td class="wiki"> Default GTK stock icon ID for all rows </td><td class="wiki"> <code>gtk-about</code>, <code>gtk-add</code>, ... <a href="http://developer.gnome.org/gtk/2.24/gtk-Stock-Items.html#GTK-STOCK-ABOUT:CAPS">(full list)</a> </td><td class="wiki"> </td></tr>
